Inclusão da barra de navegação

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "./src"
+                "./src",
+                "./src/styles"
               ]
             },
             "scripts": []
