--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "aos": "^2.3.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/aos": "^3.0.4",
     "@types/jasmine": "~4.0.0",
+    "@types/uuid": "^8.3.4",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
