--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "aos": "^2.3.4",
+    "jwt-decode": "^3.1.2",
+    "ngx-toastr": "^15.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
