--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "angular"
   ],
   "author": "Danilo Gadelha <dngadelha@outlook.com>",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/dngadelha/pokecenter/issues"
+  },
+  "homepage": "https://github.com/dngadelha/pokecenter#readme",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -32,7 +37,6 @@
     "ngx-toastr": "^15.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -41,7 +45,6 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/aos": "^3.0.4",
     "@types/jasmine": "~4.0.0",
-    "@types/uuid": "^8.3.4",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
