--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "angular-svg-icon": "^14.0.0",
     "aos": "^2.3.4",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^15.2.1",
